<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/common_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <android.widget.Button
                android:id="@+id/btn_appoint_manager"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:text="@string/appoint_manager" />

            <android.widget.Button
                android:id="@+id/btn_cancel_appointment"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:text="@string/cancel_appointment" />

            <android.widget.Button
                android:id="@+id/btn_transfer_team"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:text="@string/transfer_team" />

            <android.widget.Button
                android:id="@+id/btn_create_symkey"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:text="@string/reset_symkey" />

            <android.widget.Button
                android:id="@+id/btn_disband_team"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:text="@string/disband_team" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:gravity="end">

        <ImageButton
            android:id="@+id/back_button"
            style="@style/ImageButtonStyle"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/back" />

    </LinearLayout>

</LinearLayout>
